--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
-    "bootstrap": "^5.3.0",
-    "moments": "^0.0.2",
-    "prop-types": "^15.8.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
